--- a/exercicios/ex018/fundo005.html
+++ b/exercicios/ex018/fundo005.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalizando fundo</title>
+    <title>Posicionamento</title>
     <style>
         body{
-            background-image: url('img/pattern001.png') ;
-            background-repeat: repeat-y;
-            background-size: 100px 100px;
+            height: 98vh;
+            background-image: url('img/wallpaper003.jpg');
+            background-position: right center
         }
     </style>
 </head>
 <body>
-    
     
 </body>
 </html>
