--- a/desafios/desafio12/index.html
+++ b/desafios/desafio12/index.html
@@ -17,7 +17,7 @@
         </p>
 
     </header>
-
+<main>
     <section class="normal">
         <p>
             Estou ficando cansado <br>
@@ -30,7 +30,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -64,7 +64,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -96,7 +96,7 @@
             Deixe que Deus interprete.
         </p>
     </section>
-
+</main>
 
 
     <footer>
