--- a/exercicios/ex019/tabela001.html
+++ b/exercicios/ex019/tabela001.html
@@ -10,10 +10,15 @@
         }
         table{
             border-collapse: collapse;
+            width: 400px;
+            height: 400px;
         }
         td{
             border: 1px solid black;
-            padding-right: 80px;
+            padding: 8px;
+            text-align: center;
+            vertical-align: top;
+
 
         }
     </style>
