--- a/exercicios/ex020/iframe002.html
+++ b/exercicios/ex020/iframe002.html
@@ -22,7 +22,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat similique repellat aut repudiandae nobis ipsam ducimus nesciunt quas nisi dolore debitis repellendus a quod voluptate commodi porro voluptatem? Nemo.
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod iste, quam molestiae nisi sunt eos veniam! Hic itaque, ea nesciunt quis, cupiditate cum obcaecati quasi sapiente repellat labore qui quia!
     </p>
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras\pag001.html" frameborder="0"></iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat similique repellat aut repudiandae nobis ipsam ducimus nesciunt quas nisi dolore debitis repellendus a quod voluptate commodi porro voluptatem? Nemo.
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod iste, quam molestiae nisi sunt eos veniam! Hic itaque, ea nesciunt quis, cupiditate cum obcaecati quasi sapiente repellat labore qui quia!
