--- a/exercicios/ex022/mq004/index.html
+++ b/exercicios/ex022/mq004/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h1>Testnado media queries</h1>
+        <h1>Testando media queries</h1>
         <img id="fone" src="img/icon-phone.png" alt="Acessando via smartphone">
         <img id="tablet" src="img/icon-tablet.png" alt="Acessando via tablete">
         <img id="print" src="img/icon-print.png" alt="Versão para impressora">
