--- a/exercicios/ex023/flex003/index.html
+++ b/exercicios/ex023/flex003/index.html
@@ -8,26 +8,31 @@
         div.container{
         background-color: lightsalmon;
           display: flex;
+          height: 250px;
+          /*flex-direction: column;
+          flex-wrap: wrap;*/
+          flex-flow: column wrap;
 
         }
         div.item{
          background-color: lightblue;
          border: 1px solid black;
          display: inline-block;
-         flex: auto;
+         padding: 10px;
+         flex: auto ;
          text-align: center;
         }
     </style>
 </head>
 <body>
     <div class="container"> 
-    <div class="item">a</div>
-    <div class="item">b</div>
-    <div class="item">c</div>
-    <div class="item">d</div>
-    <div class="item">e</div>
-    <div class="item">f</div>
-    <div class="item">g</div>
+    <div class="item">Exemplo de trino a</div>
+    <div class="item">Exemplo de trino b</div>
+    <div class="item">Exemplo de trino c</div>
+    <div class="item">Exemplo de trino d</div>
+    <div class="item">Exemplo de trino e</div>
+    <div class="item">Exemplo de trino f</div>
+    <div class="item">Exemplo de trino g</div>
 </div>
 </body>
 </html>
