--- a/exercicios/ex023/flex003/index.html
+++ b/exercicios/ex023/flex003/index.html
@@ -26,13 +26,13 @@
 </head>
 <body>
     <div class="container"> 
-    <div class="item">Exemplo de trino a</div>
-    <div class="item">Exemplo de trino b</div>
-    <div class="item">Exemplo de trino c</div>
-    <div class="item">Exemplo de trino d</div>
-    <div class="item">Exemplo de trino e</div>
-    <div class="item">Exemplo de trino f</div>
-    <div class="item">Exemplo de trino g</div>
+    <div class="item">Exemplo de treino a</div>
+    <div class="item">Exemplo de treino b</div>
+    <div class="item">Exemplo de treino c</div>
+    <div class="item">Exemplo de treino d</div>
+    <div class="item">Exemplo de treino e</div>
+    <div class="item">Exemplo de treino f</div>
+    <div class="item">Exemplo de treino g</div>
 </div>
 </body>
 </html>
